syntax = "proto3";
package figterm;

// 
// Commands
//

// Message type used to send a command to figterm
message FigtermMessage {
    oneof command {
        InterceptCommand intercept_command = 1;
        InsertTextCommand insert_text_command = 2;
        SetBufferCommand set_buffer_command = 3;
    }
}

// Intercept command
// Used to set which input is intercepted by figterm
message InterceptCommand {
    // Set figterm to intercept all input
    message SetInterceptAll { }

    // Set the utf8 characters to intercept
    message SetIntercept {
        repeated uint32 chars = 1;
    }

    // Clear the utf8 characters to intercept
    message ClearIntercept {}

    // Add utf8 characters to intercept
    message AddIntercept {
        repeated uint32 chars = 1;
    }

    // Remove utf8 characters to intercept
    message RemoveIntercept {
        repeated uint32 chars = 1;
    }

    // The intercept command to execute
    oneof intercept_command {
        SetIntercept set_intercept = 1;
        ClearIntercept clear_intercept = 2;
        AddIntercept add_intercept = 3;
        RemoveIntercept remove_intercept = 4;
        SetInterceptAll set_intercept_all = 5;
    }
}

// Insert text command
// Used to insert text directly into the terminal
message InsertTextCommand {
    // insert str at cursor, accounting for deletions
    optional string insertion = 1;
    // delete `n` characters to the left of the cursor
    optional uint64 deletion = 2;
    // move cursor `n` characters from current position, 
    // accounting for insertion & deletion
    optional int64 offset = 3;
    // execute editbuffer (if true, append \r)
    optional bool immediate = 4;

    // client buffer at the time of the insertion request (prior to insertion)
    optional string insertion_buffer = 5;
}

// Set buffer command
// Used to set the line of text in the edit buffer
message SetBufferCommand {
    // The text to set
    string text = 1;
    // The cursor position to set
    optional uint64 cursor_position = 2;
}

